fix-tooltip-align

--- a/frontend/src/Components/ProfileTooltip/ProfileTooltip.scss
+++ b/frontend/src/Components/ProfileTooltip/ProfileTooltip.scss
@@ -7,27 +7,31 @@
   width: 376px;
   height: 196px;
   padding: 40px;
-  display: grid;
   gap: 32px;
   position: absolute;
   top: 64px;
   left: 1385px;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.profile-tooltip__row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-tooltip__user-data {
   display: flex;
   align-items: center;
-  justify-content: center;
+  gap: 16px;
 }
 
 .profile-tooltip__user-icon {
-  margin-right: 16px;
   width: 50px;
   height: 50px;
   border-radius: 50px;
-}
-
-.profile-tooltip__user-name {
-  margin-right: 63px;
 }
